--- a/Keebin/app/src/main/res/values/strings.xml
+++ b/Keebin/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Keebin</string>
+    <string name="baseUrl">http://82.211.198.31:3000/api/</string>
+
+    <string name="putUserUrl">users/user/</string>
+
+    <string name="deleteUserUrl">users/user/</string>
 </resources>
