--- a/Keebin/app/src/main/res/values/strings.xml
+++ b/Keebin/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">Keebin</string>
 
     <string name="baseUrl">http://82.211.198.31:3000/api/</string>
+    <string name="loginString">http://82.211.198.31:3000/</string>
 
     <string name="putUserUrl">users/user/</string>
 
