toolbar lavet  sort of... mangler at centere billeder i linearlayout

--- a/Keebin/app/src/main/res/values/strings.xml
+++ b/Keebin/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="putUserUrl">users/user/</string>
 
     <string name="deleteUserUrl">users/user/</string>
+
+    <string name="menuheight">55dp</string>
+
 </resources>
