--- a/Keebin/app/src/main/res/values/strings.xml
+++ b/Keebin/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
 
     <string name="menuheight">55dp</string>
 
+    <string name="mapsApiKey">AIzaSyC8zypq-e6S0DHuXfqwz0i1XCjgjaqJSrs</string>
+
 </resources>
